preparing for training

--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -452,7 +452,9 @@
       },
       "cell_type": "code",
       "source": [
-        "id2l, cid, q, a, cq, ca, w2c, scq, sqa = preproc_steps(lines,conversations)"
+        "id2l, cid, q, a, cq, ca, w2c, scq, sqa = preproc_steps(lines,conversations)\n",
+        "\n",
+        "questionswords2int, answerswords2int = map_questions_and_answers_to_integers(w2c)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -795,7 +797,7 @@
         "                                                           encoder_embedding_size,\n",
         "                                                           initializer = tf.random_uniform_initializer(0,1))\n",
         "  \n",
-        "  encoder_state - encoder_rnn(encoder_embedded_input, rnn_size, num_layers, keep_prob, sequence_length)\n",
+        "  encoder_state = encoder_rnn(encoder_embedded_input, rnn_size, num_layers, keep_prob, sequence_length)\n",
         "  \n",
         "  preprocessed_targets = preprocessed_targets(targets, questionswords2int, batch_size)\n",
         "  \n",
@@ -825,7 +827,97 @@
       },
       "cell_type": "code",
       "source": [
-        "# Next up: hyper parameters"
+        "# Next up: hyper parameters\n",
+        "epochs = 100\n",
+        "batch_size = 64  # make bigger to make faster\n",
+        "rnn_size = 512 \n",
+        "num_layers = 3\n",
+        "encoding_embedding_size = 512  # 512 col in embedding matrix\n",
+        "decoding_embedding_size = 512\n",
+        "learning_rate = 0.01\n",
+        "learning_rate_decay = 0.9\n",
+        "min_learning_rate = 0.0001\n",
+        "keep_probability = 0.5  # based on hinton paper '14'\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Bz-fpTJ93AGQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 388
+        },
+        "outputId": "5b52303b-16b8-4f6b-d3b3-06020c533e30"
+      },
+      "cell_type": "code",
+      "source": [
+        "# define a TF session\n",
+        "\n",
+        "# reset graphs\n",
+        "tf.reset_default_graph()\n",
+        "session = tf.InteractiveSession()\n",
+        "\n",
+        "# load model inputs\n",
+        "\n",
+        "inputs, targets, lr, keep_prob = model_inputs()\n",
+        "\n",
+        "# sequence length\n",
+        "sequence_length = tf.placeholder_with_default(25, None, name = 'sequence_length')\n",
+        "\n",
+        "# get shape of input tensor\n",
+        "input_shape = tf.shape(inputs)\n",
+        "\n",
+        "# Getting training and test predictions\n",
+        "training_predictions, test_predictions = seq2seq_model(tf.reverse(inputs, [-1]), \n",
+        "                                                       targets, \n",
+        "                                                       keep_prob, \n",
+        "                                                       batch_size, \n",
+        "                                                       sequence_length,\n",
+        "                                                       len(answerswords2int),\n",
+        "                                                       len(questionswords2int),\n",
+        "                                                       encoding_embedding_size,\n",
+        "                                                       decoding_embedding_size,\n",
+        "                                                       rnn_size,\n",
+        "                                                       num_layers,\n",
+        "                                                       questionswords2int)\n",
+        "                                                    "
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/tensorflow/python/client/session.py:1714: UserWarning: An interactive session is already active. This can cause out-of-memory errors in some cases. You must explicitly call `InteractiveSession.close()` to release resources held by the other session(s).\n",
+            "  warnings.warn('An interactive session is already active. This can '\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-74-fdf9c00f36f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m                                                        \u001b[0mrnn_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m                                                        \u001b[0mnum_layers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m                                                        questionswords2int)\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-63-c5255a33ae31>\u001b[0m in \u001b[0;36mseq2seq_model\u001b[0;34m(inputs, targets, keep_prob, batch_size, sequence_length, answers_num_words, questions_num_words, encoder_embedding_size, decoder_embedding_size, rnn_size, num_layers, questionswords2int)\u001b[0m\n\u001b[1;32m      8\u001b[0m                                                            initializer = tf.random_uniform_initializer(0,1))\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mencoder_state\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mencoder_rnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoder_embedded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrnn_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_layers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msequence_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0mpreprocessed_targets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocessed_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtargets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquestionswords2int\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'encoder_state' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Zd-FT3VW31Su",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
