--- a/Seq2Seq.ipynb
+++ b/Seq2Seq.ipynb
@@ -41,7 +41,7 @@
         "!pip install -q xlrd\n",
         "!git clone https://github.com/hamil168/Chatbots"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -60,14 +60,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "33911ed1-5686-47ee-ba4d-59717b9a6813"
+        "outputId": "00b7a480-2242-4c2e-a462-a422fe64ecb1"
       },
       "cell_type": "code",
       "source": [
         "# Change to Colab directory:\n",
         "cd Chatbots/\n"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,22 +109,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 70
         },
-        "outputId": "9c2ef11b-fa2c-4111-e545-e32ba033fc49"
+        "outputId": "b156c422-de06-4100-ff19-355b08133bcc"
       },
       "cell_type": "code",
       "source": [
         "# Files as they appear in the repo clone\n",
         "ls"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cornell Movie Script Database EDA.ipynb  movie_lines.txt  preproc.py\r\n",
-            "movie_conversations.txt                  Preproc.ipynb    \u001b[0m\u001b[01;34m__pycache__\u001b[0m/\r\n"
+            "Cornell Movie Script Database EDA.ipynb  Preproc.ipynb  Seq2Seq.ipynb\r\n",
+            "movie_conversations.txt                  preproc.py\r\n",
+            "movie_lines.txt                          README.md\r\n"
           ],
           "name": "stdout"
         }
@@ -465,15 +466,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 105
         },
-        "outputId": "4510a1bf-e24a-4dae-f0a1-ba4080bc6164"
+        "outputId": "3733677f-8fb7-46e7-d3b7-3b0a2b412b37"
       },
       "cell_type": "code",
       "source": [
         "conversations[0:5]"
       ],
-      "execution_count": 45,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -489,7 +490,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 7
         }
       ]
     },
@@ -499,15 +500,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 87
         },
-        "outputId": "a9a5492c-5fd0-4f6a-cd09-942b740925ce"
+        "outputId": "3ac40bed-efd6-419e-d332-826feee726e1"
       },
       "cell_type": "code",
       "source": [
         "get_conversations_ids(conversations[0:5])"
       ],
-      "execution_count": 46,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +523,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 8
         }
       ]
     },
@@ -576,14 +577,14 @@
         "# need batches, \n",
         "# need each to start with <SOS> token\n",
         "\n",
-        "def preproc_targets(targets, word2int, batch_size):\n",
+        "def preprocess_targets(targets, word2int, batch_size):\n",
         "  left_side = tf.fill([batch_size, 1], word2int['<SOS>'])\n",
         "    \n",
         "  # up to batch size less the last token\n",
         "  # slide of [1,1]\n",
         "  right_side = tf.strided_slice(targets, [0,0], [batch_size, -1], [1,1])\n",
         "  preprocessed_target = tf.concat([left_side,right_side], axis=1)\n",
-        "  return preproc_targets"
+        "  return preprocessed_target"
       ],
       "execution_count": 0,
       "outputs": []
@@ -615,7 +616,7 @@
         "  # builds independent forward and backward rnn\n",
         "  # need ot make sure the ends match\n",
         "  # (first element is encoder_output)\n",
-        "  _, encoder_state = tf.nn.bdirectional_dynamic_rnn(cell_fw = encouder_cell,\n",
+        "  _, encoder_state = tf.nn.bidirectional_dynamic_rnn(cell_fw = encoder_cell,\n",
         "                                                   cell_bw = encoder_cell,\n",
         "                                                   sequence_length = sequence_length,\n",
         "                                                   inputs = rnn_inputs,\n",
@@ -624,6 +625,21 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "XrO9rYaxfuUc",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Attention\n",
+        "- Need to learn more.\n",
+        "- https://www.tensorflow.org/api_guides/python/contrib.seq2seq\n",
+        "- (warning for later, when I add Beam Search) **NOTE** If you are using the `BeamSearchDecoder` with a cell wrapped in\n",
+        "`AttentionWrapper`\n",
+        "- will also need to return here with DeviceWrapper for multiple GPUs"
+      ]
     },
     {
       "metadata": {
@@ -639,26 +655,37 @@
         "                       keep_prob, batch_size):\n",
         "  \n",
         "  # Get attention states\n",
+        "  # shaped [batch_size, memory_max_time, memory_depth]\n",
         "  attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
+        "\n",
+        "  # linear attention\n",
+        "  attention_mechanism = tf.contrib.seq2seq.BahdanauAttention(num_units = decoder_cell.output_size, memory = attention_states)\n",
         "  \n",
-        "  # preprocess data to prepare it for attention \n",
-        "  attention_keys, attention_values, attention_score_functions, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attetion_states,\n",
-        "                                         attention_options = 'bahdanau',\n",
-        "                                         num_units = decoder_cell.output_size)\n",
-        "    \n",
+        "  # 256 look up.\n",
+        "  attention_cell = tf.contrib.seq2seq.AttentionWrapper(decoder_cell, attention_mechanism, attention_size = 256)\n",
+        "  \n",
+        "  training_decoder_function = tf.contrib.seq2seq.TrainingHelper()\n",
+        "  \n",
+        "  \n",
         "  training_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_train(encoder_state[0],\n",
         "                                                                            attention_keys,\n",
         "                                                                            attention_values,\n",
         "                                                                            attention_score_function,\n",
         "                                                                            attention_construct_function,\n",
         "                                                                            name = 'attn_dec_train')\n",
+        "  \n",
+        "  \n",
         " \n",
         "  # second arg is decoder_final_state, 3rd is decoder_final_context_state\n",
-        "  decoder_output, _, _, = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
+        "  decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
         "                                                                training_decoder_function,\n",
         "                                                                decoder_embedded_input,\n",
         "                                                                sequence_length,\n",
         "                                                                scope = decoding_scope)\n",
+        "  \n",
+        "  # returns (final_outputs, final_state, final_sequence_lengths)\n",
+        "  decoder_output, _, _ = tf.contrib.seq2seq.dynamic_decode(decoder_cell,\n",
+        "                                                          training_decoder_function)\n",
         "  \n",
         "  decoder_output_dropout = tf.nn.dropout(decoder_output, keep_prob)\n",
         "  return output_function(decoder_output_dropout)\n",
@@ -666,6 +693,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "CDEoEQboa0yt",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ]
     },
     {
       "metadata": {
@@ -684,10 +721,15 @@
         "                       keep_prob, batch_size):\n",
         "  \n",
         "  # Get attention states\n",
+        "  # Shaped [batch_size, memory_max_time, memory_depth]\n",
         "  attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
         "  \n",
         "  # preprocess data to prepare it for attention \n",
-        "  attention_keys, attention_values, attention_score_functions, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attetion_states,\n",
+        "  attention_keys, attention_values, attention_score_functions, attention_construct_function = tf.contrib.seq2seq.BahdanauAttention(num_units = decoder_cell.output_size,\n",
+        "                                                                                                                                  memory = attention_states)\n",
+        "  \n",
+        "  \n",
+        "  prepare_attention(attetion_states,\n",
         "                                         attention_options = 'bahdanau',\n",
         "                                         num_units = decoder_cell.output_size)\n",
         "    \n",
@@ -799,7 +841,7 @@
         "  \n",
         "  encoder_state = encoder_rnn(encoder_embedded_input, rnn_size, num_layers, keep_prob, sequence_length)\n",
         "  \n",
-        "  preprocessed_targets = preprocessed_targets(targets, questionswords2int, batch_size)\n",
+        "  preprocessed_targets = preprocess_targets(targets, questionswords2int, batch_size)\n",
         "  \n",
         "  decoder_embeddings_matrix = tf.Variable(tf.random_uniform([questions_num_words + 1, decoder_embedding_size], 0, 1))\n",
         "  \n",
@@ -848,9 +890,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 388
+          "height": 614
         },
-        "outputId": "5b52303b-16b8-4f6b-d3b3-06020c533e30"
+        "outputId": "b95f7c8d-a1d6-4464-95e2-c4e5796c5d7e"
       },
       "cell_type": "code",
       "source": [
@@ -885,7 +927,7 @@
         "                                                       questionswords2int)\n",
         "                                                    "
       ],
-      "execution_count": 74,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -897,14 +939,16 @@
         },
         {
           "output_type": "error",
-          "ename": "NameError",
+          "ename": "AttributeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-74-fdf9c00f36f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m                                                        \u001b[0mrnn_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m                                                        \u001b[0mnum_layers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m                                                        questionswords2int)\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-63-c5255a33ae31>\u001b[0m in \u001b[0;36mseq2seq_model\u001b[0;34m(inputs, targets, keep_prob, batch_size, sequence_length, answers_num_words, questions_num_words, encoder_embedding_size, decoder_embedding_size, rnn_size, num_layers, questionswords2int)\u001b[0m\n\u001b[1;32m      8\u001b[0m                                                            initializer = tf.random_uniform_initializer(0,1))\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mencoder_state\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mencoder_rnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mencoder_embedded_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrnn_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_layers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msequence_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0mpreprocessed_targets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocessed_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtargets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquestionswords2int\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'encoder_state' is not defined"
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-fdf9c00f36f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m                                                        \u001b[0mrnn_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m                                                        \u001b[0mnum_layers\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m                                                        questionswords2int)\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-23-d0ec38680c88>\u001b[0m in \u001b[0;36mseq2seq_model\u001b[0;34m(inputs, targets, keep_prob, batch_size, sequence_length, answers_num_words, questions_num_words, encoder_embedding_size, decoder_embedding_size, rnn_size, num_layers, questionswords2int)\u001b[0m\n\u001b[1;32m     25\u001b[0m                                                       \u001b[0mquestionswords2int\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m                                                       \u001b[0mkeep_prob\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m                                                       batch_size)\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-22-041fefbc792b>\u001b[0m in \u001b[0;36mdecoder_rnn\u001b[0;34m(decoder_embedded_input, decoder_embeddings_matrix, encoder_state, num_words, sequence_length, rnn_size, num_layers, word2int, keep_prob, batch_size)\u001b[0m\n\u001b[1;32m     22\u001b[0m                                               \u001b[0moutput_function\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m                                               \u001b[0mkeep_prob\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m                                               batch_size)\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mdecoding_scope\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreuse_variables\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-20-51bb903af270>\u001b[0m in \u001b[0;36mdecode_training_set\u001b[0;34m(encoder_state, decoder_cell, decoder_embedded_input, sequence_length, decoding_scope, output_function, keep_prob, batch_size)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0;31m# preprocess data to prepare it for attention\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   attention_keys, attention_values, attention_score_functions, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attetion_states,\n\u001b[0m\u001b[1;32m     11\u001b[0m                                          \u001b[0mattention_options\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'bahdanau'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m                                          num_units = decoder_cell.output_size)\n",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'tensorflow.contrib.seq2seq' has no attribute 'prepare_attention'"
           ]
         }
       ]
